Update README, fix issue with right-click context menu appearing upon clicking in gap between grid items

--- a/styles.css
+++ b/styles.css
@@ -48,3 +48,7 @@ body {
     box-sizing: border-box;
     border: 1px solid black;
 }
+
+.compact {
+    border: 1px solid rgba(0, 0, 0, 0.75);
+}
